--- a/datamart_spark.ipynb
+++ b/datamart_spark.ipynb
@@ -2,8 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "id": "e3d7b0cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init()\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import *\n",
+    "from pyspark.sql.types import IntegerType, FloatType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3196c0ab",
    "metadata": {},
    "outputs": [
     {
@@ -33,28 +47,33 @@
       "| 2020-01-17|  1.81| 72.25| 14.67|  3.95|   7.33|   0.3| 281.3|  0.02|  769.8|   0.3|360.96|   3.3| 420.3|   0.02| 351.29|\n",
       "| 2020-01-18|  1.74|  67.0| 17.86|   4.7|   8.69|  0.31|166.92|   0.3|  499.8|   0.3| 387.6|   0.3|435.54|    3.3| 384.66|\n",
       "| 2020-01-19|  1.86|  67.2| 17.59|   4.9|   8.46|   0.8|160.92|   0.3|  464.8|  0.02| 407.8|   0.3|499.56|    3.3| 222.36|\n",
+      "| 2020-01-20|  1.84| 70.86| 15.51|  4.23|   7.56|   0.3| 226.3|   0.3|  480.3|   0.3| 617.3|  0.31|409.89|    3.3| 270.96|\n",
+      "| 2020-01-21|  1.94| 74.34| 13.22|  3.39|   7.11|   0.3| 300.3|   0.3| 4268.3|   0.3| 495.3|   0.3|498.66|    0.3|  730.3|\n",
+      "| 2020-01-22|  1.91| 74.63| 13.14|  3.31|    7.0|  0.31| 400.0|   0.3| 1110.8|   0.3|294.96|   3.3| 400.3|    3.3|  264.2|\n",
+      "| 2020-01-23|  1.87| 74.11| 13.39|  3.41|   7.23|  0.31|194.29|   0.3| 553.14|   0.3|312.88|   0.3| 400.3|    0.3| 367.35|\n",
+      "| 2020-01-24|  1.96|  72.1| 14.74|   3.8|    7.4|   0.3| 165.3|   0.3| 735.17|   0.3|308.47|   0.3|275.69|    0.3|  367.3|\n",
+      "| 2020-01-25|  1.72| 66.94| 18.04|  4.72|   8.58|   0.3| 315.3|   0.3| 468.22|   0.3|173.72|   3.3|480.36|    3.3|  153.8|\n",
+      "| 2020-01-26|  1.78| 68.53| 17.09|  4.56|   8.04|   0.3|186.35|   0.3| 1722.3|   0.3|345.34|   3.3| 220.8|    0.3| 217.86|\n",
+      "| 2020-01-27|  1.91| 74.46| 13.06|  3.48|   7.08|   0.3| 260.3|   0.3| 425.92|   0.3| 240.3|  3.15|318.29|    0.3| 238.55|\n",
+      "| 2020-01-28|  1.89| 74.62| 13.17|  3.25|   7.08|  0.31|143.05|  0.01|  587.3|   0.3|298.12|  0.99|260.31|    3.3|  294.8|\n",
+      "| 2020-01-29|  1.84| 74.84| 13.01|  3.27|   7.03|   3.3|209.17|   0.3| 600.36|   0.3|454.19|   3.3| 245.3|    3.3| 227.66|\n",
+      "| 2020-01-30|  1.89| 74.57| 13.13|  3.38|   7.03|   3.3|137.35|   0.3|  600.3|   0.3|243.49|   0.3| 220.3|    0.3| 411.82|\n",
+      "| 2020-01-31|  1.81| 72.73| 14.58|  3.72|   7.15|   0.3|159.77|   0.3| 906.35|   0.3|360.36|   3.3|135.36|    3.3| 293.16|\n",
       "+-----------+------+------+------+------+-------+------+------+------+-------+------+------+------+------+-------+-------+\n",
-      "only showing top 20 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import findspark\n",
-    "findspark.init()\n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import IntegerType, FloatType\n",
-    "\n",
-    "spark = SparkSession.builder \\\n",
-    "      .master(\"local[2]\") \\\n",
-    "      .appName(\"SparkFirst\")   \\\n",
-    "      .config(\"spark.executor.memory\", \"32g\") \\\n",
-    "      .config(\"spark.driver.memory\", \"32g\") \\\n",
-    "      .config(\"spark.executor.cores\", 4) \\\n",
-    "      .config(\"spark.dynamicAllocation.enabled\", \"true\") \\\n",
-    "      .config(\"spark.dynamicAllocation.maxExecutors\", 4) \\\n",
-    "      .config(\"spark.shuffle.service.enabled\", \"true\") \\\n",
+    "spark = SparkSession.builder\\\n",
+    "      .master(\"local[2]\")\\\n",
+    "      .appName(\"SparkFirst\")\\\n",
+    "      .config(\"spark.executor.memory\", \"32g\")\\\n",
+    "      .config(\"spark.driver.memory\", \"32g\")\\\n",
+    "      .config(\"spark.executor.cores\", 4)\\\n",
+    "      .config(\"spark.dynamicAllocation.enabled\", \"true\")\\\n",
+    "      .config(\"spark.dynamicAllocation.maxExecutors\", 4)\\\n",
+    "      .config(\"spark.shuffle.service.enabled\", \"true\")\\\n",
     "      .getOrCreate()\n",
     "df = spark.read.option(\"header\", True)\\\n",
     "               .option(\"inferSchema\", \"true\")\\\n",
@@ -114,10 +133,38 @@
     "       round((df.n_4 * 100.0 / (df.n_0 + df.n_1 + df.n_2 + df.n_3 + df.n_4)), 2).alias(\"per_4p+\"),\n",
     "       df.min_0p, df.max_0p, df.min_1p, df.max_1p, df.min_2p, df.max_2p, df.min_3p, df.max_3p, \n",
     "       df.min_4p.alias(\"min_4p+\"), df.max_4p.alias(\"max_4p+\"))\\\n",
-    "  .orderBy(df.pickup_date)\n",
-    "df.show()\n",
-    "\n",
-    "df.write.csv(\"output_data_spark/result_spark.csv\", mode=\"overwrite\", header=True)"
+    "  .orderBy(df.pickup_date).cache()\n",
+    "df.show(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7fe0f730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write.csv(\"output_data_spark/datamart_spark.csv\", mode=\"overwrite\", header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "74cefd8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write.parquet(\"output_data_spark/datamart_spark.parquet\", mode=\"overwrite\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2bd117e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.catalog.clearCache()"
    ]
   }
  ],
