--- a/datamart_spark.ipynb
+++ b/datamart_spark.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "3196c0ab",
    "metadata": {},
    "outputs": [
@@ -79,8 +79,8 @@
     "               .option(\"inferSchema\", \"true\")\\\n",
     "               .csv(\"input_data/yellow_tripdata_2020-01.csv\")\\\n",
     "               .dropna()\n",
-    "df = df.filter((to_date(df.tpep_pickup_datetime) <= '2020-01-31') &\n",
-    "               (to_date(df.tpep_dropoff_datetime) >= '2020-01-01') &\n",
+    "df = df.filter((df.tpep_pickup_datetime <= '2020-01-31 23:59:59') &\n",
+    "               (df.tpep_dropoff_datetime >= '2020-01-01 00:00:00') &\n",
     "               (df.total_amount > 0))\n",
     "df = df.drop(\"VendorID\", \n",
     "             \"tpep_dropoff_datetime\", \n",
@@ -96,6 +96,7 @@
     "             \"tolls_amount\",\n",
     "             \"improvement_surcharge\",\n",
     "             \"congestion_surcharge\")\n",
+    "\n",
     "@udf(returnType = IntegerType())\n",
     "def case_s(n, x): return 1 if x == n else 0\n",
     "\n",
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "7fe0f730",
    "metadata": {},
    "outputs": [],
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "74cefd8b",
    "metadata": {},
    "outputs": [],
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "2bd117e6",
    "metadata": {},
    "outputs": [],
